--- a/assets/style.css
+++ b/assets/style.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    transition: 0.5s;
 }
 
 main {
@@ -30,14 +31,16 @@ nav ul li:hover {
     transform: scale(1.05);
 }
 
-nav .login-nav {
+nav .register-nav {
     border: 1.5px solid white;
     border-radius: 5px;
-    transition: 0.5s;
 }
 
-nav .login-nav:hover {
+nav .register-nav:hover {
     background-color: white;
+}
+
+nav .register-nav a:hover{
     color: black;
 }
 
@@ -54,7 +57,6 @@ nav ul {
 nav ul li {
     cursor: pointer;
     padding: 8px;
-    transition: 0.5s;
 }
 
 .logo {
@@ -62,7 +64,6 @@ nav ul li {
     font-size: 25px;
     font-weight: bold;
     cursor: pointer;
-    transition: 0.5s;
 }
 
 .logo:hover {
@@ -71,6 +72,8 @@ nav ul li {
 
 body {
     flex-direction: column;
+    display: flex;
+    align-items: center;
     height: 100vh;
     background-image: url("img/background.jpg");
     background-attachment: fixed;
@@ -117,7 +120,6 @@ form .email,
     width: 75%;
     height: 50px;
     border: 1px solid rgb(255, 255, 255);
-    /* border: none; */
     background: transparent;
     border-radius: 30px;
     font-size: 25px;
@@ -131,11 +133,9 @@ form button {
     background-color: white;
     border-radius: 30px;
     font-size: 25px;
-    /* padding: 10px 15px; */
     color: rgb(0, 0, 0);
     cursor: pointer;
     transition: 0.5s;
-    /* font-weight: bold; */
     border: none;
     box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2);
 }
@@ -174,7 +174,6 @@ form a:hover {
     border-radius: 50%;
     border: 1px solid white;
     cursor: pointer;
-    transition: 0.5s;
     box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2);
 }
 
@@ -187,9 +186,90 @@ form a:hover {
     font-weight: bold;
 }
 
+.register-nav a{
+    text-decoration: none;
+    color: white;
+}
+
 .socials-logos {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 5px;
+}
+
+.copy{
+    margin-top: 2%;
+}
+
+.copy a{
+    text-decoration: none;
+    color: white;
+}
+
+.copy a:hover{
+    text-decoration: underline;
+}
+
+
+@media(max-width: 520px), (max-height: 860px) {
+
+    h1 {
+        font-size: 30px;
+    }
+
+    nav ul li{
+        font-size: 18px;
+    }
+
+    form {
+        width: 300px;
+        height: 400px;
+    }
+
+    .register {
+        font-size: 10px;
+        margin-top: 2px;
+    }
+
+    form .user-password {
+        width: 65%;
+    }
+
+    .rememberme{
+        gap: 1.5px;
+    }
+
+    form .email,
+    .password,
+    button {
+        width: 70%;
+        height: 35px;
+        font-size: 15px;
+    }
+
+    .user-password .rememberme {
+        display: flex;
+        align-items: center;
+    }
+
+    .user-password p,
+    label {
+        font-size: 0.6rem;
+    }
+
+    .user-password input {
+        width: 12px;
+    }
+
+
+    form button {
+        width: 70%;
+        height: 35px;
+        font-size: 15px;
+    }
+
+    .opt-log p {
+        font-size: 12px;
+    }
 }
